oci-oke-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-oke-canary-app
  name: sample-oke-canary-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-oke-canary-app
  template:
    metadata:
      labels:
        app: sample-oke-canary-app
    spec:
      containers:
      - image: ams.ocir.io/axh1wuvhagpg/oci-canary-oke-poc:${BUILDRUN_HASH}
        #imagePullPolicy: Always 
        name: sample-oke-canary-app
        ports:
          - containerPort: 80
            protocol: TCP
        livenessProbe:
          exec:
            command:
            - cat
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: ocir-secret-prathap
