oci-oke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-oke-canary-app-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sample-oke-canary-app-service
              port:
                number: 8080
